--- a/css/app.css
+++ b/css/app.css
@@ -1,21 +1,38 @@
-@font-face {
-  font-family: CooperHewitt;
-  src: url('icons/cooperhewitt_book.ttf');
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+ul{
+  margin: 0;
 }
 .flex{
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .home{
-  background-image: url(../assets/web-design-banner.jpg);
+  background-image: url(../assets/prototype.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   height: 100vh;
+  width: 100vw;
   filter: grayscale(100%);
 }
 
+.content-title{
+  /*z-index: 1;
+  width: 30vw;
+  height: 60vh;
+  background-color: #fff;*/
+}
+.home .content-title .bg-gray{
+  background-color: #202020;
+  height: 100vh;
+  width: 30vw;
+  opacity:1;
+}
 .home::before{
   background-color: rgba(0, 0, 0, 0.37);
   content: '';
@@ -24,85 +41,117 @@
   position: absolute;
   width: 100%;
 }
-
 .home div h1{
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 4rem;
   font-weight: 700;
   text-align: center;
 }
 .home div h6{
-	font-family: 'CooperHewitt';
-	letter-spacing: 0.3em;
-	text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.3em;
+  text-align: center;
 }
+/*===Navbar===*/
+.navbar{
+  position:fixed;
+  z-index:1;
+  height: 200vh;
+  width: 100vw;
+  left:-100vw;
+  transition:1s;
+  background-color: #202020;
+  color:white;
+}
+.navbar.open{
+  left:0;
+}
+.navbar ul{
+  list-style:none;
+  margin-top:45%;
+  font-size:1.5em;
+}
+.navbar ul li{
+  padding:1px;
+  text-align: center;
+}
+.info-navbar{
+  position: absolute;
+  top: 50%;
+  left: 15%;
+}
+/*===Menu===*/
+.mobile-menu{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-container .redes-sociales{
+  margin-top: 30%;
+}
+.menu-container .redes-sociales a{
+  color: #383838;
+}
+.menu-container ul li a:hover{
+  color: #b10200;
+  line-height: 4rem;
+  cursor: pointer;
+}
+.menu-container .redes-sociales a i{
+  font-size: 2rem;
+  padding: 5%;
+  color: #b10200;
+}
+.menu-container ul li{
+  list-style: none;
+  font-size: 3rem;
+  line-height: 7rem;
+  font-weight: 700;
+}
+.menu-container ul li a{
+   color: #383838;
+}
+/*===About===*/
 .about{
-	height: 100vh;
-	background-color: #fff;
-	color: #383838;
-	padding: 0 12%;
+  height: 100vh;
+  background-color: #fff;
+  color: #383838;
+  padding: 0 12%;
 }
-.about  h1{
-	font-family: 'Playfair Display', serif;
-  font-size: 4rem;
+.about  h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
   font-weight: 700;
   text-align: center;
 }
 .about h6{
-	padding-top: 3%;
-	font-family: 'CooperHewitt';
-	letter-spacing: 0.1rem;
-	text-align: center;
-}
-#mobile-menu{
-  background: rgba(17,17,18,0.98);
-  height: 100vh;
+  padding-top: 3%;
   text-align: center;
-  display: flex;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin-bottom: 10px;
+}
+/*===Portfolio===*/
+.portfolio{
+  height: 100vh;
+  color: #383838;
+  padding: 0 12%;
+}
+
+/*font-family: 'Josefin Sans', sans-serif;
+font-family: 'Lato', sans-serif;
+*/
+/*@font-face {
+  font-family: CooperHewitt;
+  src: url('icons/cooperhewitt_book.ttf');
+}
+.flex{
+	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-#mobile-menu .menu-container .redes-sociales{
-	margin-top: 30%;
-}
-#mobile-menu .menu-container .redes-sociales a{
-	color: #383838;
-}
-#mobile-menu .menu-container ul li a:hover{
-	color: #fff;
-	line-height: 4rem;
-	border-bottom: 0.3rem solid #fff;
-	cursor: pointer;
-}
-#mobile-menu .menu-container .redes-sociales a i{
-	font-size: 1.5rem;
-	padding: 5%;
-}
-#mobile-menu .menu-container ul li{
-	list-style: none;
-	font-family: 'Playfair Display', serif;
-	font-size: 3rem;
-	line-height: 7rem;
-	font-weight: 700;
-}
-#mobile-menu .menu-container ul li a{
-	 color: #383838;
-}
-#mobile-menu div .icon-crosss{
-	 color: #fff;
-}
-#mobile-menu .menu-container .redes-sociales a i:hover{
-	font-size: 1.5rem;
-	color: #fff;
-	cursor: pointer;
-}
-#mobile-menu .icon-cross{
-	position: absolute;
-  top: 5%;
-  right: 5%;
-  font-size: 1.5rem;
-	color: #383838;
-}
+
 #mobile-menu .icon-cross:hover{
 	color: #fff;
 	cursor: pointer;
@@ -114,7 +163,8 @@
 	width: 30vw;
 	height: 60vh;
 	background-color: #fff;*/
-}
+/*}
+
 .content-title .icon-menu{
 	position: absolute;
   top: 5%;
@@ -127,131 +177,100 @@
 	cursor: pointer;
 }
 
+.content-title .backgroundText{
+  background-color: #202020;
+  width: 50vw;
+  height: 100vh;
+}
+
+/*===Hamburguer Menu===*/
+.hamburguer-btn {
+  cursor: pointer;
+  height: 60px;
+  position: absolute;
+  position: fixed;
+  top: 8%;
+  left: 8%;
+  z-index: 1;
+  width: 45px;
+  margin-top:-30px;
+  transition: all .2s ease-out;
+}
+.hamburguer-btn.open{
+  z-index: 2;
+}
+.hamburguer-btn .hamburguer-btn-line {
+  width: 100%;
+  height: 7px;
+  background: rgb(204, 2, 0);
+  margin: 7px auto;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+}
+.hamburguer-btn.on .hamburguer-btn-line-top {
+  transform: rotate(45deg) translate(10px, 10px);
+}
+.hamburguer-btn.on .hamburguer-btn-line-middle {
+  opacity: 0;
+}
+.hamburguer-btn.on .hamburguer-btn-line-bottom {
+  transform: rotate(-45deg) translate(10px, -10px);
+}
 
 
 
 
-
-
-
-
-
-
-/*===Menu Hamburger===*/
-section{
-  background-color: #3a3a3a;
+/*===Contact===*/
+.contact{
+  background-image: url(../assets/testing.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+/*  filter: grayscale(100%);
+*/}
+.contact .content{
+  height: 55vh;
+  width: 60vw;
+  background-color: rgba(204, 2, 0, 0.83);
+}
+.contact h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.contact h6{
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.color-white{
   color: #fff;
 }
-label {
-    position: absolute;
-    z-index: 1;
+.contact .redes-sociales{
+  font-size: 30px;
+  text-align: center;
+  margin-top: 40px;
 }
-input {
-    display: none;
+.contact .redes-sociales a{
+  padding: 2%;
+  opacity: 0.5;
 }
-input:checked ~ label {
-    right: 0;
+.contact .redes-sociales a:hover{
+  opacity: 1;
 }
-.burger {
-    position: relative;
-    top: 24px;
-    cursor: pointer;
+.button{
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  position: fixed;
+  right: 3%;
+  bottom: 1%;
+  background-color: rgb(204, 2, 0);
 }
-.burger g {
-    stroke: #ffffff;
-    transition: stroke 0.25s ease-in-out;    
-}
-.burger g:hover {
-    stroke: darken(#ffffff, 20%);
-}
-input:checked ~ label .burger {
-    opacity: 0;
-}
-.close {
-    position: relative;
-    top: 24px;
-    cursor: pointer;
-    opacity: 0;
-}
-
-.close g:hover {
-    stroke: darken(#ffffff, 20%);
-}
-
-.close g {
-    stroke: #ffffff;
-    transition: stroke 0.25s ease-in-out;    
-}
-
-.close line {
-    transform-origin: 0%;
-}
-
-.close g {
-    transform: rotateZ(45deg);
-    transform-origin: 50%;
-}
-
-input:checked ~ label .close {
-    opacity: 1;
-}
-
-.menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    opacity: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: tomato;
-    transition: opacity 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-input:checked ~ .menu {
-    opacity: 1;
-}
-
-.menu div {
-    margin-top: 50px;
-    transition: margin 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-input:checked ~ .menu div {
-    margin-top: 0px;
-}
-
-.main {
-    display: flex;
-    width: 100vw;
-    height: 100vh;    
-}
-
-.main span {
-    margin: auto;
-    font-size: 40px;
-    color: #ffffff;
-    font-family: 'Pacifico', cursive;    
-}
-
-.slide{
-  width: 200px;
-  height: 200px;
-  background-image: url("http://www.informatica-hoy.com.ar/hardware-notebook-laptop/imagenes/Elegir-computadora-chicos_clip_image006.jpg");
-  position: relative;
-}
-
-.slide::before{
-  background-color: rgba(0, 0, 0, 0.37);
-  content: '';
-  display: block;
-  height: 100%;
-  position: absolute;
-  width: 100%;
+.button:hover{
+  background-color: #202020;
 }
